infrastructure/controllers/local-path/base/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: localpath-internal-policy
  namespace: localpath
spec:
  endpointSelector: {} # Applies to all pods in the namespace
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": localpath
  # Note: Ingress is usually not needed unless they expose a service (like the webhook)
